tdf#164249 adjust XML_localSheetId to take into account not exported sheets

this is to avoid failure on re-import of:

XmlFilterBase::importFragment - XML parser failed in fragment 'xl/workbook.xml'
	com.sun.star.uno.RuntimeException message: "invalid sheet index used at sc/source/filter/oox/workbookhelper.cxx:438"
Error: source file could not be loaded

Change-Id: I235edd018c4ebcd4bafa9c549bdec9f23f0bd6b2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182069
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins
(cherry picked from commit bf4fe0c2ba1d0a44cc07c6afba6d56b8adf8af50)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182457
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>